# reference-implementations

./: CONTRIBUTORS.md  Cargo.toml  LICENSE-MIT
.github/actions/checkout-platform-sibling/: action.yml
.github/workflows/: ci.yml
pelorus-gateway/: Cargo.toml  README.md
pelorus-gateway/src/: lib.rs
pelorus-gnss/: Cargo.toml  README.md
pelorus-gnss/src/: can_fd.rs  lib.rs
pelorus-vdr/: Cargo.toml  README.md
pelorus-vdr/src/: main.rs
