[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
repository = "https://github.com/pelorus-marine/reference-implementations"
rust-version = "1.88.0"

[workspace]
resolver = "2"
members = ["pelorus-gnss", "pelorus-gateway"]
default-members = ["pelorus-gnss", "pelorus-gateway"]

[workspace.lints.rust]
unsafe_code = "forbid"
