[package]
name = "pelorus-gnss"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "Pelorus Core first-stack hardware pairing reference (GNSS, antenna, MCU)"
readme = "README.md"

[lints]
workspace = true
