[package]
name = "pelorus-vdr"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "Pelorus voyage data recorder scaffold — MDF4 logging on A55 Linux (Phase 3)."
readme = "README.md"

[[bin]]
name = "pelorus-vdr"
path = "src/main.rs"

[dependencies]
pelorus-core = { path = "../../platform/pelorus-core", version = "0.1.1", default-features = false, features = ["std", "vdr"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
